export const snapshot = {};

snapshot[`Label List Command - Help Text 1`] = `
stdout:
"
Usage: list

Description:

  List labels

Options:

  -h, --help            - Show this help.                                  
  -t, --team  <team>    - Filter by team ID or key                         
  --plain               - Disable colored output                           
  --human               - Output in human-readable format (default: JSON)  
  --format    <format>  - Output format: text|json                         

"
stderr:
""
`;

snapshot[`Label List Command - All Labels 1`] = `
stdout:
'{
  "labels": [
    {
      "id": "label-1",
      "name": "bug",
      "description": "Bug reports and fixes",
      "color": "#FF0000",
      "team": {
        "id": "team-eng",
        "key": "ENG",
        "name": "Engineering"
      }
    },
    {
      "id": "label-2",
      "name": "feature",
      "description": "New features",
      "color": "#00FF00",
      "team": {
        "id": "team-product",
        "key": "PROD",
        "name": "Product"
      }
    },
    {
      "id": "label-3",
      "name": "documentation",
      "description": null,
      "color": "#0000FF",
      "team": null
    }
  ],
  "count": 3
}
'
stderr:
""
`;

snapshot[`Label List Command - JSON Output 1`] = `
stdout:
'{
  "labels": [
    {
      "id": "label-1",
      "name": "bug",
      "description": "Bug reports",
      "color": "#FF0000",
      "team": {
        "id": "team-eng",
        "key": "ENG",
        "name": "Engineering"
      }
    }
  ],
  "count": 1
}
'
stderr:
""
`;

snapshot[`Label List Command - No Labels Found 1`] = `
stdout:
'{
  "labels": [],
  "count": 0
}
'
stderr:
""
`;
